<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#099F91"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:transitionName="image_logo"
        android:src="@drawable/edited_logo"
        android:contentDescription="@string/logo_image"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/logo_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="BUS FINDER"
        android:transitionName="logo_text"
        android:textColor="#7842D8"
        android:textSize="36sp"/>
    <TextView
        android:id="@+id/slogan_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in_to_continue"
        android:transitionName="start_msg"
        android:textSize="20sp"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/Username"
            app:counterMaxLength="20"
            android:transitionName="user_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:ignore="HardcodedText">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/Password"
            app:passwordToggleEnabled="true"
            android:transitionName="pass_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:ignore="HardcodedText">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/forget_password"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:elevation="0dp"
            android:onClick="loginUser"
            android:text="@string/login"
            android:transitionName="button_sign" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:onClick="callRegistraion"
            android:text="@string/new_user_sign_up"
            android:transitionName="next_btn"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>


</LinearLayout>